# genies

./: Makefile  genie.sh  genie_poll.c
genie/: Cargo.toml
genie/src/: lib.rs
msgg/: Makefile  TODO  client.c  client.h  message.c  message.h  msg_send.c  msgg.c
pagerg/: Makefile  pagerg.c
tscg/: Cargo.toml
tscg/src/: main.rs
watchg/: Cargo.toml
watchg/src/: main.rs
